Fixed problems with footer and content aligning with post-its. Ideal step would be to get the white space to expand or decrease the whitespace onclick.

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,17 @@ body {
 	margin: 0;
 }
 
+p, ul {
+	margin: 0;
+}
 
+/* Create sticky footer */
+footer {
+	position: relative;
+	margin-top: 150px;
+	margin-bottom: -150px;
+	clear:both;
+}
 @media (min-width: 1800px) {
 	.parallax {
 		width: 100%;
